# dotnet-bazel-sample

./: .bazelrc  .gitignore  README.MD  WORKSPACE.bazel  muse-match.sln  nuget2config.json
src/identity/: BUILD.bazel  WeatherForecast.cs  identity.csproj
src/identity/Controllers/: WeatherForecastController.cs
src/identity/Properties/: launchSettings.json
src/profile/: BUILD.bazel  WeatherForecast.cs
src/profile/Controllers/: WeatherForecastController.cs
src/profile/Properties/: launchSettings.json
